[gd_scene load_steps=8 format=3 uid="uid://c5arod0gnflip"]

[ext_resource type="Script" path="res://scripts/basic_enemy.gd" id="1_nyi3f"]
[ext_resource type="Texture2D" uid="uid://b3ilxv7boydph" path="res://assets/visuals/tank.png" id="2_75l8i"]
[ext_resource type="Texture2D" uid="uid://yv5e0me3wtwk" path="res://assets/visuals/1x1 red.png" id="3_uvt8a"]
[ext_resource type="Texture2D" uid="uid://fybw7abr4k1m" path="res://assets/visuals/1x1 green.png" id="4_ni5yu"]
[ext_resource type="AudioStream" uid="uid://c6kh8115jn64x" path="res://assets/audio/sfx/tank_break.wav" id="5_nkhf4"]
[ext_resource type="AudioStream" uid="uid://bywvyoq8jirbg" path="res://assets/audio/sfx/tank_shot.wav" id="6_52lqy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kuybw"]
size = Vector2(24, 26)

[node name="BasicEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_nyi3f")
reward = 3

[node name="sprite" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="sprite"]
rotation = 1.57079
scale = Vector2(0.26, 0.26)
texture = ExtResource("2_75l8i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_kuybw")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 20.0
debug_path_custom_color = Color(0.815686, 0, 0, 1)

[node name="NavTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="shottimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="RaycastView" type="RayCast2D" parent="."]
collide_with_areas = true

[node name="healthbar" type="TextureProgressBar" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -21.0
offset_right = 13.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
nine_patch_stretch = true
texture_under = ExtResource("3_uvt8a")
texture_progress = ExtResource("4_ni5yu")

[node name="tank_break" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_nkhf4")
bus = &"sfx"

[node name="shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_52lqy")
bus = &"sfx"

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="NavTimer" to="." method="_on_nav_timer_timeout"]
[connection signal="timeout" from="shottimer" to="." method="_on_shottimer_timeout"]
